--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -2,9 +2,9 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our Studio!</div>
-                <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <div class="intro-lead-in">Welcome to CricketLive!</div>
+                <div class="intro-heading">For quick and accurate Updates of cricket</div>
+                <a href="#services" class="page-scroll btn btn-xl">Explore</a>
             </div>
         </div>
     </header>
