--- a/app/views/cricket/show.html.erb
+++ b/app/views/cricket/show.html.erb
@@ -39,7 +39,11 @@
 
 		<%= render 'home/header' %>
 		
+		<%= render 'score_section' ,  @news %>
+		
 		<%= render 'news_section' ,  @news %>
+		
+		<%= render 'schedules_section' ,  @matchCalendar %>
 	
 		<%= render 'home/footer' %>
 
