--- a/app/views/cricket/_news_section.html.erb
+++ b/app/views/cricket/_news_section.html.erb
@@ -1,18 +1,17 @@
-<section id="portfolio">
+<section id="news">
 	<div class="container">
-		<div class="row text-primary">
+		<div class="row text-primary col-sm-10 col-sm-offset-1">
 			<h3>Cricket News</h3>
 		</div>
-		<div class="row">
+		<div class="row col-sm-10 col-sm-offset-1">
 			<% news = @news['data']%>
 			<% news['data'].each do |type| %>
 
-			<div class="cb-col cb-col-100 cb-lst-itm cb-lst-itm-lg">
-
-				<div class="cb-col-67 cb-nws-lst-rt cb-col cb-col-text-container">
-					<b class="cb-nws-hdln cb-font-18 line-ht24"><b class="cb-nws-hdln-ancr"
+			<div class="cl-news-box">
+				<div class="cl-nws-lst">
+					<b class="cl-nws-ttl"><b class="cl-nws-hdln-ancr"
 					title="<%= type['title'].html_safe %>"><%= type['title'].html_safe %></b></b>
-					<div class="cb-nws-intr">
+					<div class="cl-nws-intr">
 						<%= type['description'].html_safe %>
 					</div>
 				</div>
