--- a/app/views/home/_navigation.html.erb
+++ b/app/views/home/_navigation.html.erb
@@ -16,13 +16,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="#livescores">Live Scores</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#news">News</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#schedules">Schedules</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">Team</a>
