--- a/app/assets/stylesheets/cricket.scss
+++ b/app/assets/stylesheets/cricket.scss
@@ -3,6 +3,16 @@
 // // You can use Sass (SCSS) here: http://sass-lang.com/
 
 // for news_page
+
+.green {
+    background: #60ab59;
+}
+.cb-hm-exprt-hdr {
+    background: #CE6B70;
+    color: #fff;
+    margin: 0 -15px;
+    padding: 3px 15px;
+}
 .cl-news-box {
   display: inline-block;
   box-sizing: border-box;
