--- a/app/views/cricket/_score_section.html.erb
+++ b/app/views/cricket/_score_section.html.erb
@@ -1,10 +1,21 @@
 <section id="livescores">
-	<div class="container">
-		<div class="row text-primary col-sm-10 col-sm-offset-1">
+	<div class="container ">
+		<div class="row text-center col-sm-10 col-sm-offset-1 green">
 			<h3>Live Scores</h3>
 		</div>
 		<div class="row col-sm-10 col-sm-offset-1">
 			live scores
 		</div>
+	</div>
+
+	<!-- panel -->
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			panel heading
+		</div>
+		<div class="panel-body">
+			panel-body
+		</div>
+
 	</div>
 </section>
