--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -4,7 +4,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome to CricketLive!</div>
                 <div class="intro-heading">For quick and accurate Updates of cricket</div>
-                <a href="#services" class="page-scroll btn btn-xl">Explore</a>
+                <a href="#livescores" class="page-scroll btn btn-xl">Explore</a>
             </div>
         </div>
     </header>
