--- a/app/views/cricket/_news_section.html.erb
+++ b/app/views/cricket/_news_section.html.erb
@@ -1,6 +1,6 @@
 <section id="news">
 	<div class="container">
-		<div class="row text-primary col-sm-10 col-sm-offset-1">
+		<div class="row text-center col-sm-10 col-sm-offset-1 green">
 			<h3>Cricket News</h3>
 		</div>
 		<div class="row col-sm-10 col-sm-offset-1">
