--- a/app/assets/stylesheets/cricket.scss
+++ b/app/assets/stylesheets/cricket.scss
@@ -7,6 +7,10 @@
 .green {
     background: #60ab59;
 }
+
+.black {
+  background: #000000;
+}
 .cb-hm-exprt-hdr {
     background: #CE6B70;
     color: #fff;
@@ -100,6 +104,61 @@
   color: #666;
   padding-bottom: 5px;
 }
+
+// for live scores
+
+.cl-lst-mtch {
+  list-style: none;
+  margin-left: 5px;
+  padding-bottom: 5px;
+}
+
+li {
+    display: list-item;
+    text-align: -webkit-match-parent;
+}
+
+.cl-scg-srs-nm {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    width: 250px;
+    padding-top: 5px;
+    color: #d1d1d1;
+    font-weight: bold;
+    font-size: 13px;
+}
+
+
+.cl-mtch-all {
+    opacity: 1;
+    padding: 0 0 10px;   
+}
+
+.cl-nt-live {
+  opacity: 0.4!important;
+}
+
+.cl-nt-today {
+  opacity: 0.4!important;
+}
+
+.cl-mm-mtch-tm {
+  font-size: 13px;
+  color: #fff;
+} 
+
+.cl-mm-liv-tag {
+  font-size: 10px;
+  color: #FB7D8D;
+}
+ 
+.cl-mm-mtch-nm {
+  font-size: 11px;
+  color: #d1d1d1;
+}
+
+
 // body {
   // background: #E3E6E3;
   // font-family: helvetica, "Segoe UI", Arial, sans-serif;
