--- a/app/views/cricket/_news_section.html.erb
+++ b/app/views/cricket/_news_section.html.erb
@@ -3,11 +3,11 @@
 		<div class="row text-center col-sm-10 col-sm-offset-1 green">
 			<h3>Cricket News</h3>
 		</div>
-		<div class="row col-sm-10 col-sm-offset-1">
+		<div class="row col-sm-10 col-sm-offset-1 bg-light-gray">
 			<% news = @news['data']%>
 			<% news['data'].each do |type| %>
 
-			<div class="cl-news-box">
+			<div class="cl-news-box bg-light-gray">
 				<div class="cl-nws-lst">
 					<b class="cl-nws-ttl"><b class="cl-nws-hdln-ancr"
 					title="<%= type['title'].html_safe %>"><%= type['title'].html_safe %></b></b>
