--- a/app/views/cricket/_schedules_section.html.erb
+++ b/app/views/cricket/_schedules_section.html.erb
@@ -3,12 +3,12 @@
 		<div class="row text-center col-sm-10 col-sm-offset-1 green">
 			<h3>Schedules</h3>
 		</div>
-		<div class="row col-sm-10 col-sm-offset-1">
+		<div class="row col-sm-10 col-sm-offset-1 bg-light-gray">
 
-			<div class="cl-scdl-box">
+			<div class="cl-scdl-box bg-light-gray">
 				<% @matchCalendar['data']['data'].each do |type| %>
 
-				<div class="cl-scdl-lst">
+				<div class="cl-scdl-lst bg-light-gray">
 					<div class="cl-scdl-date">
 						<b class="cl-scdl-hdln"><b class="cl-scdl-hdln-ancr"
 						title="<%= type['date'].html_safe %>"><%= type['date'].html_safe %></b></b>
