--- a/app/views/ballbyball/_details.html.erb
+++ b/app/views/ballbyball/_details.html.erb
@@ -3,7 +3,7 @@
 		<div class="row text-center col-sm-10 col-sm-offset-1 green">
 			<h3>Match Details</h3>
 		</div>
-		<div class="row col-sm-10 col-sm-offset-1 bg-light-gray">
+		<div class="row col-sm-10 col-sm-offset-1 ">
 			<!-- details section-->			
 			<%= render 'summary' ,  @ballbyball %>
 			<!-- details section-->
