added score section

--- a/app/assets/stylesheets/cricket.scss
+++ b/app/assets/stylesheets/cricket.scss
@@ -27,6 +27,15 @@
   padding: 20px 0;
 }
 
+.cl-match-box {
+  display: inline-block;
+  box-sizing: border-box;
+  float: left;
+  min-height: 1px;
+  width: 100%;
+  padding: 20px 0;
+}
+
 .cl-nws-lst {
   width: 67%;
   padding-left: 10px;
