--- a/app/views/cricket/show.html.erb
+++ b/app/views/cricket/show.html.erb
@@ -39,6 +39,8 @@
 
 		<%= render 'home/header' %>
 		
+		<%= render 'score_section' ,  @cricket %>
+		
 		<%= render 'news_section' ,  @news %>
 		
 		<%= render 'schedules_section' ,  @matchCalendar %>
