added link_to from liveupdates to matchsummary

--- a/app/views/ballbyball/_navigation.html.erb
+++ b/app/views/ballbyball/_navigation.html.erb
@@ -16,13 +16,13 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#livescores">Live Scores</a>
+                        <a class="page-scroll" href="/cricket/show">Live Scores</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#news">News</a>
+                        <a class="page-scroll" href="/cricket/show">News</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#schedules">Schedule</a>
+                        <a class="page-scroll" href="/cricket/show">Schedule</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#team">Team</a>
