--- a/app/views/ballbyball/show.html.erb
+++ b/app/views/ballbyball/show.html.erb
@@ -35,7 +35,7 @@
 
 	<body id="page-top" class="index">
 
-		<%= render 'home/navigation' %>
+		<%= render 'navigation' %>
 
 		<%= render 'home/header' %>
 			
