--- a/app/views/cricket/_schedules_section.html.erb
+++ b/app/views/cricket/_schedules_section.html.erb
@@ -1,7 +1,7 @@
 <section id="schedules">
 	<div class="container">
 		<div class="row text-center col-sm-10 col-sm-offset-1 green">
-			<h3>Schedules</h3>
+			<h3>Schedule</h3>
 		</div>
 		<div class="row col-sm-10 col-sm-offset-1 bg-light-gray">
 
