--- a/app/views/ballbyball/_summary.html.erb
+++ b/app/views/ballbyball/_summary.html.erb
@@ -1,19 +1,19 @@
-<div class="cb-col-100 cb-col">
+<div class="cl-col-100">
 	<%= render 'player_update' ,  @ballbyball %>
 	<%  @ballbyball['data']['data'].each do |ball| %>
 
-	<div class="cb-min-inf cb-col-100 ng-scope" ng-if="match.miniscore.bowler">
+	<div class="cl-min-inf" >
 		<% ball['ball'].each do |delivery| %>
 		<% if delivery['pre_text'].present? && delivery['pre_text'] == "<p>\n<b>Updates Only</b>\n</p>" %>
 			<h2> <%= delivery['pre_text'].html_safe %> </h2>
 		<% else %>
-		<div id="comm_1485072283484" class="cb-col cb-col-100 ng-scope" ng-if="comm[ts].evt != 'over-break'">
-			<div ng-if="comm[ts].o_no != null || ( comm[ts].videoId != null &amp;&amp; comm[ts].evt.indexOf('Plugin') < 0)" class="cb-col cb-col-8 text-bold ng-scope">
-				<div ng-bind="comm[ts].o_no" ng-if="comm[ts].o_no != null" title="Jan 22, 2017 1:34:43 PM" class="cb-mat-mnu-wrp cb-ovr-num ng-binding ng-scope">
+		<div id="comm_1485072283484" class="cl-col-100" >
+			<div class="cl-bold-8">
+				<div title="Jan 22, 2017 1:34:43 PM" class="cl-mat-mnu-wrp">
 					<%= delivery['overs_actual'] %>
 				</div>
 			</div>
-			<p ng-bind-html="comm[ts].comm" class="cb-com-ln ng-binding cb-col cb-col-90" ng-class="get_comm_class(comm[ts])" ng-hide="comm[ts].geo != null &amp;&amp; comm[ts].geo.length > 0 &amp;&amp; comm[ts].geo.indexOf($root.$GEO.country) == -1">
+			<p class="cl-com-ln">
 				<%= delivery['players'] %>,	<%= delivery['text'].html_safe %>
 			</p>
 		</div>
@@ -28,18 +28,18 @@
 		<!-- loop through team-->
 		<%  @ballbyball['data']['team'].each do |team| %>
 		<!-- redundant required-->
-		<div class="cb-col cb-col-100 cb-ltst-wgt-hdr">
-			<div class="cb-col cb-col-100 cb-scrd-hdr-rw">
+		<div class="cl-ltst-wgt-hdr">
+			<div class="cl-scrd-hdr-rw">
 				<span><%= team['team_name']%></span>
 			</div>
-			<div class="cb-col cb-col-100 cb-scrd-sub-hdr cb-bg-gray">
-				<div class="cb-col cb-col-27 text-bold">
+			<div class="cl-scrd-sub-hdr">
+				<div class="cl-bold-27">
 					Player
 				</div>
-				<div class="cb-col cb-col-33">
+				<div class="cl-col-33">
 					primary role
 				</div>
-				<div class="cb-col cb-col-8 text-right text-bold">
+				<div class="cl-col-8">
 					age
 				</div>
 			</div>
@@ -47,14 +47,14 @@
 			<!-- need to loop-->
 			<%  team['player'].each do |player| %>
 
-			<div class="cb-col cb-col-100 cb-scrd-itms">
-				<div class="cb-col cb-col-27 ">
-					<a href="/profiles/8934/samit-gohel" title="View profile of Samit Gohel" class="cb-text-link"> <%= player['known_as'] %> </a>
+			<div class="cl-scrd-itms">
+				<div class="cl-col-27">
+					<a href="/profiles/8934/samit-gohel" title="View profile of Samit Gohel" class="cl-text-link"> <%= player['known_as'] %> </a>
 				</div>
-				<div class="cb-col cb-col-33">
+				<div class="cl-col-33">
 					<span class="text-gray"></span><%= player['player_primary_role'] %>
 				</div>
-				<div class="cb-col cb-col-8 text-right text-bold">
+				<div class="cl-col-8">
 					<%= player['age_years'] %>
 				</div>
 
