--- a/app/views/ballbyball/_details.html.erb
+++ b/app/views/ballbyball/_details.html.erb
@@ -1,7 +1,7 @@
 <section id="news">
 	<div class="container">
 		<div class="row text-center col-sm-10 col-sm-offset-1 green">
-			<h3>Match Details</h3>
+			<h4><%= @cricketScore['data']['team-1'] + " VS "+ @cricketScore['data']['team-2'] %></h4>
 		</div>
 		<div class="row col-sm-10 col-sm-offset-1 ">
 			<!-- details section-->			
