--- a/app/views/ballbyball/_summary.html.erb
+++ b/app/views/ballbyball/_summary.html.erb
@@ -4,7 +4,15 @@
 
 	<div class="cl-min-inf" >
 		<% ball['ball'].each do |delivery| %>
-		<% if delivery['pre_text'].present? && delivery['pre_text'] == "<p>\n<b>Updates Only</b>\n</p>" %>
+		<% if delivery['pre_text'].present? && strip_tags(delivery['pre_text']).upcase == "\nUPDATES ONLY\n" %>
+			<div class="cl-col-100">
+				<div class="cl-com-ln">	
+					<%= @cricketScore['data']['score'].html_safe%>
+				</div>
+				<div class="cl-com-ln">	
+					<%= @cricketScore['data']['innings-requirement'].html_safe %>
+				</div>	
+			</div>
 			<h2> <%= delivery['pre_text'].html_safe %> </h2>
 		<% else %>
 		<div id="comm_1485072283484" class="cl-col-100" >
