added over details to ballbyball details of match

--- a/app/assets/stylesheets/ballbyball.scss
+++ b/app/assets/stylesheets/ballbyball.scss
@@ -226,7 +226,77 @@
   
 }
 
+// ?????????????? over details ????????????????????????????
+
+
+.cl-com-ovr-sum-rw {
+  display: inline-block;
+  box-sizing: border-box;
+  float: left;
+  min-height: 1px;
+  width: 100%;
+  padding: 10px 0;
+  font-size: 12px;
+}
+   
+.cl-com-ovr-sum-itm-8 {
+  display: inline-block;
+  box-sizing: border-box;
+  float: left;
+  min-height: 1px;
+  width: 8%;
+  font-weight: bold;
+  font-size: 18px;
+  font-weight: bold;
+  padding: 0 15px;
+  border-right: 1px solid #d1d1d1;
+} 
+
+.cl-com-ovr-sum-itm-25 {
+  display: inline-block;
+  box-sizing: border-box;
+  float: left;
+  min-height: 1px;
+  width: 25%;
+  padding: 0 15px;
+  border-right: 1px solid #d1d1d1;  
+}
+
+.cl-text-bold {
+  font-weight: bold;
+}
  
+.cl-col-67 {
+  display: inline-block;
+  box-sizing: border-box;
+  float: left;
+  min-height: 1px;
+  width: 67%
+  
+}
+
+
+.cl-col-binding {
+  display: inline-block;
+  box-sizing: border-box;
+  float: left;
+  min-height: 1px; 
+  width:33%;
+  text-align: right; 
+}
+
+
+.cl-com-ovr-sum-itm-17 {
+  display: inline-block;
+  box-sizing: border-box;
+  float: left;
+  min-height: 1px;
+  width: 17%;
+  padding: 0 15px;
+  border-right: 1px solid #d1d1d1;
+}
+
+
 // body {
   // background: #E3E6E3;
   // font-family: helvetica, "Segoe UI", Arial, sans-serif;
