fixed over_details issue

--- a/app/views/ballbyball/_over_details.html.erb
+++ b/app/views/ballbyball/_over_details.html.erb
@@ -1,3 +1,4 @@
+<% if locals[:ball]["event_string"].present? &&  locals[:ball]["runs"].present?  && locals[:ball]["wickets"].present? %>
 <div class="cl-com-ovr-sum-rw bg-light-gray">
 	<div class="cl-com-ovr-sum-itm-8" style="min-height:33px;">
 		<%= locals[:ball]["over_number"] %>
@@ -36,3 +37,4 @@
 		<% end %>	
 	</div>
 </div>
+<% end %>
