--- a/app/views/ballbyball/_summary.html.erb
+++ b/app/views/ballbyball/_summary.html.erb
@@ -1,8 +1,9 @@
 <div class="cl-col-100">
 	<%= render 'player_update' ,  @ballbyball %>
 	<%  @ballbyball['data']['data'].each do |ball| %>
-	
-	<%= render 'over_details',  locals: { ball: ball , ballbyball: @ballbyball} %>
+	<% if !ball['ball'].first['pre_text'].present? || strip_tags(ball['ball'].first['pre_text']).upcase != "\nUPDATES ONLY\n" %>
+	<%= render 'over_details',  locals: { ball: ball , ballbyball: @ballbyball} %>	
+	<% end %>
 	<div class="cl-min-inf" >
 		<% ball['ball'].each do |delivery| %>
 		<% if delivery['pre_text'].present? && strip_tags(delivery['pre_text']).upcase == "\nUPDATES ONLY\n" %>
