--- a/app/views/cricket/_news_section.html.erb
+++ b/app/views/cricket/_news_section.html.erb
@@ -1,11 +1,22 @@
+<script>
+$(document).ready(function(){
+   $(".news_button").on("click", function(){	
+		go_to_url = "/news/show"
+		window.open(go_to_url, '_blank');
+	})
+});
+	
+</script>
+
 <section id="news">
 	<div class="container">
 		<div class="row text-center col-sm-10 col-sm-offset-1 green">
 			<h3>Cricket News</h3>
 		</div>
 		<div class="row col-sm-10 col-sm-offset-1 bg-light-gray">
-			<% news = @news['data']%>
-			<% news['data'].each do |type| %>
+			<% news = @news[:news]['data']%>
+			<% ncount = 0 %>
+			<% for type in news['data'] %>
 
 			<div class="cl-news-box bg-light-gray">
 				<div class="cl-nws-lst">
@@ -17,8 +28,23 @@
 				</div>
 
 			</div>
+			<% ncount += 1 %>
+			<% if ncount == 5 %>
+				<% break %>
 			<% end %>
-		</div>
+			<% end %>
+			</div>
+			<!-- button -->
+
+			<div align="center" class="row col-sm-10 col-sm-offset-1">
+				
+			<button type="button" href="/news/show" id="" class="btn btn-primary news_button" data-dismiss="modal">
+			 More <i class="fa fa-times"></i>	
+			</button>
+		
+		<!-- button end-->
+	</div>
+
 	</div>
 </section>
 
