--- a/app/views/playerstat/_player_profile.html.erb
+++ b/app/views/playerstat/_player_profile.html.erb
@@ -1,5 +1,4 @@
 <style>
-
 	.playercard h2 {
 		color: #0054df;
 		font-weight: bold;
@@ -8,176 +7,196 @@
 	.playercard table {
 		background: #fff;
 	}
-</style>			
-			<div class="container">
+	
+	.padding {
+		padding-left: 0 !important;
+	}
+</style>
+<div class="container">
+	<div class="row">
+		<div class="col-sm-12 padding">
+			<div class="modal-body">
+				<!-- Project Details Go Here -->
 				<div class="row">
-					<div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
-						<div class="modal-body">
-							<!-- Project Details Go Here -->
-							<div class="row">
-								<div style="background: url(/assets/black.jpg); border-radius: 10px;" class="col-lg-12 col-md-12 col-xs-12 col-sm-12 playercard" itemscope="" itemtype="http://schema.org/Person">
-									<!-- <center> -->
-									<img src=<%= @playerStats['data']['imageURL']%> alt="<%= @playerStats['data']['name']%>" title="<%= @playerStats['data']['name']%>" class="img-thumbnail img-rounded" itemprop="image">
+					<div style="background: url(/assets/black.jpg); border-radius: 10px;" class="col-sm-10 playercard padding" itemscope="" itemtype="http://schema.org/Person">
+						<!-- <center> -->
+						<div align="center" class="col-sm-10 col-sm-offset-1 padding">
+						<img src=<%= @playerStats['data']['imageURL']%> alt="<%= @playerStats['data']['name']%>" title="<%= @playerStats['data']['name']%>" class="img-thumbnail img-rounded" itemprop="image">
 
-									<h2 itemprop="name"><img src="http://cdn.cricapi.com/country/Flag%20Of%20India.png" alt="India" title="India" height="48" style="margin-right:5px;"> <%= @playerStats['data']['name']%></h2>
-									<!-- </center> -->
-									<table class="table table-striped col-lg-12 col-md-12 col-xs-12 col-sm-12">
+						<h2 itemprop="name"><img src="http://cdn.cricapi.com/country/Flag%20Of%20India.png" alt="India" title="India" height="48" style="margin-right:5px;"> <%= @playerStats['data']['name']%></h2>
+						</div>
+						<!-- </center> -->
+						<div class="table-responsive col-sm-10 col-sm-offset-1 padding">
+						<table class="table table-striped">
+							
+							<tbody>
+								<tr>
+									<th>Plays for</th>
+									<td colspan="2" itemprop="nationality"><%= @playerStats['data']['country']%></td>
+								</tr>
 
-										<tbody>
-											<tr>
-												<th>Plays for</th>
-												<td colspan="2" itemprop="nationality"><%= @playerStats['data']['country']%></td>
-											</tr>
+								<tr>
+									<th>Age</th>
+									<td colspan="2"><%= @playerStats['data']['currentAge']%> </td>
+								</tr>
 
-											<tr>
-												<th>Age</th>
-												<td colspan="2"><%= @playerStats['data']['currentAge']%> </td>
-											</tr>
+								<tr>
+									<th>Born</th>
+									<td colspan="2"><%= @playerStats['data']['born']%></td>
+								</tr>
 
-											<tr>
-												<th>Born</th>
-												<td colspan="2"><%= @playerStats['data']['born']%></td>
-											</tr>
+								<tr>
+									<th>Batting Style</th>
+									<td colspan="2"><%= @playerStats['data']['battingStyle']%></td>
+								</tr>
 
-											<tr>
-												<th>Batting Style</th>
-												<td colspan="2"><%= @playerStats['data']['battingStyle']%></td>
-											</tr>
+								<tr>
+									<th>Bowling Style</th>
+									<td colspan="2"><%= @playerStats['data']['bowlingStyle']%></td>
+								</tr>
 
-											<tr>
-												<th>Bowling Style</th>
-												<td colspan="2"><%= @playerStats['data']['bowlingStyle']%></td>
-											</tr>
+								<tr>
+									<td colspan="2"> <%= @playerStats['data']['profile']%> </td>
+								</tr>
 
-											<tr>
-												<td colspan="2"> <%= @playerStats['data']['profile']%> </td>
-											</tr>
+							</tbody>
+						</table>
+						</div>
 
-										</tbody>
-									</table>
+						<div class="table-responsive col-sm-10 col-sm-offset-1 padding">
+						<table class="table table-striped">
+							<tbody>
+								<tr>
+									<th colspan="3">Major Teams Affiliated With</th>
+								</tr>
 
-									<table class="table table-striped col-lg-12 col-md-12 col-xs-12 col-sm-12">
-										<tbody>
-											<tr>
-												<th colspan="3">Major Teams Affiliated With</th>
-											</tr>
+								<tr>
+									<!-- for each loop starts here-->
+									<% majorTeams = @playerStats['data']['majorTeams'].split(",")%>
+									<% majorTeams.each do |team| %>
+									<td><%= team %></td>
+									<% end %>
+									<!-- for each loop ends here-->
+								</tr>
 
-											<tr>
-												<!-- for each loop starts here-->
-												<% majorTeams = @playerStats['data']['majorTeams'].split(",")%>
-												<% majorTeams.each do |team| %>
-												<td><%= team %></td>
-												<% end %>
-												<!-- for each loop ends here-->
-											</tr>
-											
-										</tbody>
-									</table>
+							</tbody>
+						</table>
+						</div>
+						
+						<div align="center" class="col-sm-10 col-sm-offset-1 padding">
+						<h3>Batting Performance</h3>
+						</div>
+						
+						<div class="table-responsive col-sm-10 col-sm-offset-1 padding">
+						<table class="table table-striped">
+							<tbody>
+								<tr>
+									<th>League</th>
+									<th>50</th>
+									<th>100</th>
+									<th>St</th>
+									<th>Ct</th>
+									<th>6s</th>
+									<th>4s</th>
+									<th>Ave</th>
+									<th>HS</th>
+									<th>Runs</th>
+									<th>NO</th>
+									<th>Inns</th>
+									<th>Mat</th>
 
-									<h3>Batting Performance</h3>
-									<table class="table table-striped col-lg-12 col-md-12 col-xs-12 col-sm-12">
-										<tbody>
-											<tr>
-												<th>League</th>
-												<th>50</th>
-												<th>100</th>
-												<th>St</th>
-												<th>Ct</th>
-												<th>6s</th>
-												<th>4s</th>
-												<th>Ave</th>
-												<th>HS</th>
-												<th>Runs</th>
-												<th>NO</th>
-												<th>Inns</th>
-												<th>Mat</th>
+								</tr>
+								<!-- for each loop starts here-->
+								<% batting = @playerStats['data']['data']['batting']%>
+								<% batting.each do |type| %>
 
-											</tr>
-											<!-- for each loop starts here-->
-												<% batting = @playerStats['data']['data']['batting']%>
-												<% batting.each do |type| %>
-												
-												<tr>
-												<th><%= type[0] %></th>
-												<td><%= type[1]['50'] %></td>
-												<td><%= type[1]['100'] %></td>
-												<td><%= type[1]['St'] %></td>
-												<td><%= type[1]['Ct'] %></td>
-												<td><%= type[1]['6s'] %></td>
-												<td><%= type[1]['4s'] %></td>
-												<td><%= type[1]['Ave'] %></td>
-												<td><%= type[1]['HS'] %></td>
-												<td><%= type[1]['Runs'] %></td>
-												<td><%= type[1]['NO'] %></td>
-												<td><%= type[1]['Inns'] %></td>
-												<td><%= type[1]['Mat'] %></td>
-												</tr>
-												<% end %>
-											<!-- for each loop ends here-->
-											
-										</tbody>
-									</table>
+								<tr>
+									<th><%= type[0] %></th>
+									<td><%= type[1]['50'] %></td>
+									<td><%= type[1]['100'] %></td>
+									<td><%= type[1]['St'] %></td>
+									<td><%= type[1]['Ct'] %></td>
+									<td><%= type[1]['6s'] %></td>
+									<td><%= type[1]['4s'] %></td>
+									<td><%= type[1]['Ave'] %></td>
+									<td><%= type[1]['HS'] %></td>
+									<td><%= type[1]['Runs'] %></td>
+									<td><%= type[1]['NO'] %></td>
+									<td><%= type[1]['Inns'] %></td>
+									<td><%= type[1]['Mat'] %></td>
+								</tr>
+								<% end %>
+								<!-- for each loop ends here-->
 
-									<h3>Bowling Performance</h3>
-									<table class="table table-striped col-lg-12 col-md-12 col-xs-12 col-sm-12">
-										<tbody>
-											<tr>
-												<th>League</th>
-												<th>10</th>
-												<th>5w</th>
-												<th>4w</th>
-												<th>Econ</th>
-												<th>Ave</th>
-												<th>BBM</th>
-												<th>BBI</th>
-												<th>Wkts</th>
-												<th>Runs</th>
-												<th>Balls</th>
-												<th>Inns</th>
-												<th>Mat</th>
+							</tbody>
+						</table>
+						</div>
+						
+						<div align="center" class="col-sm-10 col-sm-offset-1 padding">
+						<h3>Bowling Performance</h3>
+						</div>
+						<div class="table-responsive col-sm-10 col-sm-offset-1 padding">
+						<table class="table table-striped">
+							<tbody>
+								<tr>
+									<th>League</th>
+									<th>10</th>
+									<th>5w</th>
+									<th>4w</th>
+									<th>Econ</th>
+									<th>Ave</th>
+									<th>BBM</th>
+									<th>BBI</th>
+									<th>Wkts</th>
+									<th>Runs</th>
+									<th>Balls</th>
+									<th>Inns</th>
+									<th>Mat</th>
 
-											</tr>
-											
-											<!-- for each loop starts here-->
-												<% bowling = @playerStats['data']['data']['bowling']%>
-												<% bowling.each do |type| %>
-												
-												<tr>
-												<th><%= type[0] %></th>
-												<td><%= type[1]['10'] %></td>
-												<td><%= type[1]['5w'] %></td>
-												<td><%= type[1]['4w'] %></td>
-												<td><%= type[1]['Econ'] %></td>
-												<td><%= type[1]['Ave'] %></td>
-												<td><%= type[1]['BBM'] %></td>
-												<td><%= type[1]['BBI'] %></td>
-												<td><%= type[1]['Wkts'] %></td>
-												<td><%= type[1]['Runs'] %></td>
-												<td><%= type[1]['Balls'] %></td>
-												<td><%= type[1]['Inns'] %></td>
-												<td><%= type[1]['Mat'] %></td>
-												</tr>
-												<% end %>
-											<!-- for each loop ends here-->
-																
-										</tbody>
-									</table>
+								</tr>
 
-								</div>
+								<!-- for each loop starts here-->
+								<% bowling = @playerStats['data']['data']['bowling']%>
+								<% bowling.each do |type| %>
 
-							</div>
-							<!-- Project Details ends Here -->
-							<table class="table">
-								<tbody>
-									<tr>
-									<td align="center"><button type="button" class="btn btn-primary" data-dismiss="modal">
-										<i class="fa fa-times"></i> Return
-										</button>
-							</td>
-									</tr>
-									</tbody>
-							</table>
+								<tr>
+									<th><%= type[0] %></th>
+									<td><%= type[1]['10'] %></td>
+									<td><%= type[1]['5w'] %></td>
+									<td><%= type[1]['4w'] %></td>
+									<td><%= type[1]['Econ'] %></td>
+									<td><%= type[1]['Ave'] %></td>
+									<td><%= type[1]['BBM'] %></td>
+									<td><%= type[1]['BBI'] %></td>
+									<td><%= type[1]['Wkts'] %></td>
+									<td><%= type[1]['Runs'] %></td>
+									<td><%= type[1]['Balls'] %></td>
+									<td><%= type[1]['Inns'] %></td>
+									<td><%= type[1]['Mat'] %></td>
+								</tr>
+								<% end %>
+								<!-- for each loop ends here-->
+
+							</tbody>
+						</table>
 						</div>
 					</div>
+
+				</div>
+				<!-- Project Details ends Here -->
+				<div align="center" class="col-sm-10 col-sm-offset-1 padding">
+				<table class="table">
+					<tbody>
+						<tr>
+							<td align="center">
+							<button type="button" class="btn btn-primary" data-dismiss="modal">
+								<i class="fa fa-times"></i> Return
+							</button></td>
+						</tr>
+					</tbody>
+				</table>
 				</div>
 			</div>
+		</div>
+	</div>
+</div>
