linked playerstat page with the players

--- a/app/assets/stylesheets/agency.css
+++ b/app/assets/stylesheets/agency.css
@@ -278,7 +278,7 @@ header .intro-text .intro-heading {
   }
 }
 section {
-  padding: 100px 0;
+  padding: 0 0;
 }
 section h2.section-heading {
   font-size: 40px;
@@ -295,7 +295,7 @@ section h3.section-subheading {
 }
 @media (min-width: 768px) {
   section {
-    padding: 150px 0;
+    padding: 150px 0 !important;
   }
 }
 .service-heading {
@@ -611,6 +611,9 @@ section#contact .text-danger {
 footer {
   padding: 25px 0;
   text-align: center;
+  color: #EEE;
+  background: #333;
+  
 }
 footer span.copyright {
   line-height: 40px;
