--- a/app/views/playerstat/_player_profile.html.erb
+++ b/app/views/playerstat/_player_profile.html.erb
@@ -21,17 +21,23 @@
 					<div style="background: url(/assets/black.jpg); border-radius: 10px;" class="col-sm-10 playercard padding" itemscope="" itemtype="http://schema.org/Person">
 						<!-- <center> -->
 						<div align="center" class="col-sm-10 col-sm-offset-1 padding">
+							<% if @playerStats['data']['imageURL'].present? %>
 						<img src=<%= @playerStats['data']['imageURL']%> alt="<%= @playerStats['data']['name']%>" title="<%= @playerStats['data']['name']%>" class="img-thumbnail img-rounded" itemprop="image">
-
-						<h2 itemprop="name"><img src="http://cdn.cricapi.com/country/Flag%20Of%20India.png" alt="India" title="India" height="48" style="margin-right:5px;"> <%= @playerStats['data']['name']%></h2>
+							<% else %>
+						<h4>No image found</h4>
+							<% end %>
+							<!-- http://cdn.cricapi.com/country/Flag%20Of%20Sri Lanka.png -->
+							<% if @playerStats['data']['country'].present? && (getTeamFlag(@playerStats['data']['country'])).present? %>
+						<h2 itemprop="name"><img src="<%= getTeamFlag(@playerStats['data']['country']).to_s %>" alt="India" title="India" height="48" style="margin-right:5px;"> <%= @playerStats['data']['name']%></h2>
+							<% end %>
 						</div>
 						<!-- </center> -->
-						<div class="table-responsive col-sm-10 col-sm-offset-1 padding">
+						<div class="col-sm-10 col-sm-offset-1 padding">
 						<table class="table table-striped">
 							
 							<tbody>
 								<tr>
-									<th>Plays for</th>
+									<th>Country</th>
 									<td colspan="2" itemprop="nationality"><%= @playerStats['data']['country']%></td>
 								</tr>
 
@@ -92,39 +98,41 @@
 							<tbody>
 								<tr>
 									<th>League</th>
-									<th>50</th>
-									<th>100</th>
-									<th>St</th>
-									<th>Ct</th>
-									<th>6s</th>
-									<th>4s</th>
-									<th>Ave</th>
-									<th>HS</th>
-									<th>Runs</th>
-									<th>NO</th>
-									<th>Inns</th>
 									<th>Mat</th>
-
+									<th>Inns</th>
+									<th>NO</th>
+									<th>Runs</th>
+									<th>HS</th>
+									<th>Ave</th>
+									<th>4s</th>
+									<th>6s</th>
+									<th>Ct</th>
+									<th>St</th>
+									<th>100</th>
+									<th>50</th>									
 								</tr>
 								<!-- for each loop starts here-->
+							<% if  @playerStats['data']['data'].present? && @playerStats['data']['data']['batting'].present? %>
 								<% batting = @playerStats['data']['data']['batting']%>
 								<% batting.each do |type| %>
 
 								<tr>
 									<th><%= type[0] %></th>
-									<td><%= type[1]['50'] %></td>
-									<td><%= type[1]['100'] %></td>
-									<td><%= type[1]['St'] %></td>
-									<td><%= type[1]['Ct'] %></td>
-									<td><%= type[1]['6s'] %></td>
-									<td><%= type[1]['4s'] %></td>
-									<td><%= type[1]['Ave'] %></td>
-									<td><%= type[1]['HS'] %></td>
-									<td><%= type[1]['Runs'] %></td>
-									<td><%= type[1]['NO'] %></td>
-									<td><%= type[1]['Inns'] %></td>
 									<td><%= type[1]['Mat'] %></td>
+									<td><%= type[1]['Inns'] %></td>
+									<td><%= type[1]['NO'] %></td>
+									<td><%= type[1]['Runs'] %></td>
+									<td><%= type[1]['HS'] %></td>
+									<td><%= type[1]['Ave'] %></td>
+									<td><%= type[1]['4s'] %></td>
+									<td><%= type[1]['6s'] %></td>
+									<td><%= type[1]['Ct'] %></td>
+									<td><%= type[1]['St'] %></td>
+									<td><%= type[1]['100'] %></td>
+									<td><%= type[1]['50'] %></td>		
 								</tr>
+								<% end %>
+								
 								<% end %>
 								<!-- for each loop ends here-->
 
@@ -140,41 +148,42 @@
 							<tbody>
 								<tr>
 									<th>League</th>
-									<th>10</th>
-									<th>5w</th>
-									<th>4w</th>
-									<th>Econ</th>
-									<th>Ave</th>
-									<th>BBM</th>
-									<th>BBI</th>
-									<th>Wkts</th>
-									<th>Runs</th>
-									<th>Balls</th>
-									<th>Inns</th>
 									<th>Mat</th>
-
+									<th>Inns</th>
+									<th>Balls</th>
+									<th>Runs</th>
+									<th>Wkts</th>
+									<th>BBI</th>
+									<th>BBM</th>
+									<th>Ave</th>
+									<th>Econ</th>
+									<th>4w</th>
+									<th>5w</th>
+									<th>10</th>																
 								</tr>
 
 								<!-- for each loop starts here-->
+							<% if  @playerStats['data']['data'].present? && @playerStats['data']['data']['bowling'].present? %>
 								<% bowling = @playerStats['data']['data']['bowling']%>
 								<% bowling.each do |type| %>
 
 								<tr>
 									<th><%= type[0] %></th>
-									<td><%= type[1]['10'] %></td>
-									<td><%= type[1]['5w'] %></td>
-									<td><%= type[1]['4w'] %></td>
-									<td><%= type[1]['Econ'] %></td>
-									<td><%= type[1]['Ave'] %></td>
-									<td><%= type[1]['BBM'] %></td>
-									<td><%= type[1]['BBI'] %></td>
-									<td><%= type[1]['Wkts'] %></td>
-									<td><%= type[1]['Runs'] %></td>
-									<td><%= type[1]['Balls'] %></td>
-									<td><%= type[1]['Inns'] %></td>
 									<td><%= type[1]['Mat'] %></td>
+									<td><%= type[1]['Inns'] %></td>
+									<td><%= type[1]['Balls'] %></td>
+									<td><%= type[1]['Runs'] %></td>
+									<td><%= type[1]['Wkts'] %></td>
+									<td><%= type[1]['BBI'] %></td>
+									<td><%= type[1]['BBM'] %></td>
+									<td><%= type[1]['Ave'] %></td>
+									<td><%= type[1]['Econ'] %></td>
+									<td><%= type[1]['4w'] %></td>
+									<td><%= type[1]['5w'] %></td>
+									<td><%= type[1]['10'] %></td>				
 								</tr>
 								<% end %>
+							<% end %>
 								<!-- for each loop ends here-->
 
 							</tbody>
@@ -184,17 +193,10 @@
 
 				</div>
 				<!-- Project Details ends Here -->
-				<div align="center" class="col-sm-10 col-sm-offset-1 padding">
-				<table class="table">
-					<tbody>
-						<tr>
-							<td align="center">
-							<button type="button" class="btn btn-primary" data-dismiss="modal">
+				<div align="center" class="col-sm-10 col-sm-offset-1 padding">			
+						<button type="button" class="btn btn-primary" data-dismiss="modal">
 								<i class="fa fa-times"></i> Return
 							</button></td>
-						</tr>
-					</tbody>
-				</table>
 				</div>
 			</div>
 		</div>
