updated navigation bar for the ballbyball details page

--- a/app/views/ballbyball/_navigation.html.erb
+++ b/app/views/ballbyball/_navigation.html.erb
@@ -1,5 +1,10 @@
  <!-- Navigation -->
-    <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
+ <style>
+ .black {
+ 	background-color: #222 !important;
+ }
+ </style>
+    <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top black">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
@@ -16,19 +21,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/cricket/show">Live Scores</a>
+                        <a class="page-scroll" href="#live_updates">Live Update</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/cricket/show">News</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="/cricket/show">Schedule</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#team">Team</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#team_details">Team Details</a>
                     </li>
                 </ul>
             </div>
