--- a/app/views/ballbyball/_details.html.erb
+++ b/app/views/ballbyball/_details.html.erb
@@ -1,8 +1,8 @@
 <section id="news">
 	<div class="container">
-		<div class="row text-center col-sm-10 col-sm-offset-1 green">
+		<!-- <div class="row text-center col-sm-10 col-sm-offset-1 green">
 			<h4><%= @cricketScore['data']['team-1'] + " VS "+ @cricketScore['data']['team-2'] %></h4>
-		</div>
+		</div> -->
 		<div class="row col-sm-10 col-sm-offset-1 ">
 			<!-- details section-->			
 			<%= render 'summary' ,  @ballbyball %>
