--- a/app/views/cricket/_score_section.html.erb
+++ b/app/views/cricket/_score_section.html.erb
@@ -5,11 +5,23 @@
 		</div>
 		<div class="row col-sm-10 col-sm-offset-1 bg-light-gray">			
 			<% @cricket['data']['data'].each do |match|  %>
-				<div class="col-sm-6 cl-match-box">
-					<%= match['description'].html_safe %>
+					<div class="row">
+					<b><%= "#{ @liveUpdate[match['unique_id']]['data']['team-1'] } VS #{ @liveUpdate[match['unique_id']]['data']['team-2']}" %> </b>
+					</div>
+					<div class="row">
+					<%= @liveUpdate[match['unique_id']]['data']['type'] %>
+					</div>
+					<div class="row">
+					<%= @liveUpdate[match['unique_id']]['data']['innings-requirement'] %>
+					</div>
+					<div class="row">
+					<%= @liveUpdate[match['unique_id']]['data']['score'] %>
+					</div>
+					<div align="center">
+						<button class="btn btn-info">
 					<%= link_to "More" , {:controller => "ballbyball", :action => "show", :unique_id => match['unique_id'].to_s }  %>
-				</div>
-				
+						</button>	
+					</div>	
 			<% end%>		
 		</div>
 	</div>
